--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -13,25 +13,19 @@ code {
 }
 
 #map-container {
-  position: relative;
-  width: 96vw;
-  height: 90vh;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.sidebar {
-  position: relative;
-  height: 4vh;
-  background-color: #23374be6;
-  color: #fff;
-  padding: 6px 12px;
-  font-family: monospace;
-  z-index: 1;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
-  margin: 12px;
-  border-radius: 4px;
+}
+
+#floater {
+  position: absolute;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 22;
 }
 
 .marker {
@@ -44,8 +38,8 @@ code {
 .mapboxgl-canvas {
   left: 0;
   position: relative;
-  width: 96vw;
-  height: 96vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 #checkboxes {
